# slamv2

./: .gitignore  README.md  save_results.sh
data/: .gitignore  run_coppeliasim.sh
data/shared_data/: cur_env.ttt  env1.ttt  env2.ttt  env3.ttt  env4.ttt  env5.ttt  env6.ttt  env7.ttt  env8.ttt
data/shared_data/meshes/: superquadric_0.50_0.25_1.00_0.80_1000.stl  superquadric_0.50_0.25_1.70_0.80_1000.stl  superquadric_0.50_0.25_2.00_0.80_1000.stl  superquadric_0.50_0.40_0.30_0.80_1000.stl  superquadric_0.50_0.50_1.00_0.80_1000.stl  superquadric_1.50_1.00_0.30_0.80_1000.stl  superquadric_1.50_1.80_1.30_0.80_1000.stl  superquadric_1.80_1.80_1.80_0.80_1000.stl  superquadric_2.00_1.00_1.00_1.80_1000.stl  superquadric_2.00_1.00_1.80_0.80_1000.stl  superquadric_2.00_1.50_1.00_1.80_1000.stl  superquadric_2.00_1.50_1.80_0.80_1000.stl  superquadric_2.00_2.00_1.00_0.80_1000.stl  superquadric_2.00_2.00_1.80_0.80_1000.stl
data/shared_data/scans/: model_e_real.txt
env/: build_all.sh
env/archlinux-dev/: Dockerfile  build.sh
env/coppeliasim/: Dockerfile  build.sh
src/: CMakeLists.txt  aggregate.cpp  aggregate.h  cmdlineoptions.cpp  cmdlineoptions.h  data.cpp  data.h  ekf.cpp  ekf.h  ekf.hpp  ellipsemodel.cpp  ellipsemodel.h  entity.cpp  entity.h  entitymap.cpp  entitymap.h  fsm.cpp  fsm.h  fsm.hpp  functions.hpp  handler.cpp  handler.h  handler.hpp  iekf.cpp  linemodel.cpp  linemodel.h  main.cpp  mappernode.cpp  mappernode.h  mc-tests.sh  model.cpp  model.h  model.hpp  preproc.hpp  scan.cpp  scan.h  simulate.hpp  tools.cpp  tools.h  vecext.hpp  (+3 more)
src/.devcontainer/: devcontainer.json
src/evaluator/: evaluator.cpp
src/mappernode/: aggregate.cpp  aggregate.h  cmdlineoptions.cpp  data.cpp  data.h  ellipsemodel.cpp  ellipsemodel.h  entity.cpp  entity.h  entitymap.cpp  fsm.cpp  fsm.hpp  functions.hpp  handler.cpp  handler.h  iekf.cpp  iekf.h  linemodel.cpp  mappernode.cpp  model.cpp  model.h  preproc.hpp  scan.cpp  scan.h  tools.cpp  tools.h  visualizer.cpp  visualizer.h  visualizer.hpp
src/mc-segm-simulator/: cmdlineoptions.cpp  cmdlineoptions.h  mc-segm-simulator.cpp  simulator.cpp  simulator.h
src/mc-simulator/: cmdlineoptions.cpp  cmdlineoptions.h  simulator.cpp  simulator.h
src/segm-evaluator/: segm-evaluator.cpp
